<resources>
    <string name="app_name">Jobs Finder</string>

    <!--    bottom navigation-->
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="jobs">Jobs</string>
    <string name="my_network">My Network</string>

    <!--    create post-->
    <string name="normal_post">Normal Post</string>
    <string name="job_post">Job Post</string>
    <string name="anyone">Anyone</string>
    <string name="username">Username</string>

    <!--    home & post strings-->
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="comments">comments</string>
    <string name="post_body">President cast election as choice between all our republicans who seek to impose a nationwide abortion ban and democrat</string>
    <string name="comment">comment......</string>

    <!--    job location strings-->
    <string name="on_your_location">On your location</string>
    <string name="on_site">On-site</string>
    <string name="remote">Remote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contract_type">Contract type</string>
    <string name="Location">Location</string>
    <string name="work_place">job type</string>
    <string name="Salary">Salary</string>
    <string name="posted_on">Posted on</string>
    <string name="apply_btn">Apply now</string>
    <string name="about_company">About company \n coming soon</string>
    <string name="dialog_message">To complete the Application you need to send your Resume</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="Experience">Experience</string>
    <string name="intermediate">Intermediate</string>

    <string name="page_number_one">1 of 2</string>
    <string name="page_number_two">2 of 2</string>
    <string name="title">Title</string>
    <string name="add_job_title">Add job title</string>
    <string name="company">Company</string>
    <string name="add_company_name">Add company name</string>
    <string name="location">Location</string>
    <string name="country_city">Country, City</string>
    <string name="job_type">Job Type</string>
    <string name="hybrid">Hybird</string>
    <string name="work_type">Work Type</string>
    <string name="full_time">Full-time</string>
    <string name="part_time">Part-time</string>
    <string name="internship">Internship</string>
    <string name="volunteer">Volunteer</string>
    <string name="temporary">Temporary</string>
    <string name="experience">Experience</string>
    <string name="senior_level">Senior-level</string>
    <string name="description">Description</string>
    <string name="add_description">Add description</string>
    <string name="qualification">Qualification</string>
    <string name="skills">Skills</string>
    <string name="salary">Salary</string>
    <string name="usd_month">USD/Month</string>
    <string name="public_state">public</string>
    <string name="post_hint">What\'s on your mind ?</string>
    <string name="camera">Camera</string>
    <string name="video_photo">Photo</string>
    <string name="personal_name">Bilal Alkhatib</string>
    <string name="jop_title">Android Developer</string>
    <string name="created_at">3hours ago</string>
    <string name="post_content">President cast election as choice between all our republicans who seek to impose President cast election as choice between all our republicans who seek to impose</string>
    <string name="likes_count">10.5K</string>
    <string name="comments_count">350</string>
    <string name="recommended">Recommended</string>
    <string name="top_salary">Top salary</string>


    <!--    signup strings-->
    <string name="full_name">Full name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have account?</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="more_feature">Fill the information for more feature</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up_here">Sign up here</string>

    <!--    signUp      -->
    <string name="job_title">Job title</string>
    <string name="education">Education</string>
    <string name="experiences">Experiences</string>
    <string name="experiences_requirement">Experiences Requirement</string>
    <string name="experience_level">Experience Level</string>
    <string name="entry">Entry</string>
    <string name="mid_level">Mid-level</string>
    <string name="senior_leve">Senior-leve</string>
    <string name="expert">Expert</string>
    <string name="your_skills">Your skills</string>
    <string name="add_skills">Add skills</string>
    <string name="next">Next</string>

    <string name="discover_your_career_with_our_app">Discover your career with our App.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="UI_UX_Designer">UI/UX Designer</string>
    <string name="Graphic_Design">Graphic Design</string>
    <string name="qualification_text">\nBachelor\'s degree in Marketing, Business Administration, or a related field.</string>
    <string name="applicants">Applicants</string>
    <string name="applicants_number">29</string>
    <string name="required_skills">Required Skills</string>
    <string name="popular_jobs">Popular Jobs</string>
    <string name="retry">Retry</string>
    <string name="save_icon">save icon</string>
    <string name="company_logo">company logo</string>


    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="sharePost">Hello bro,Your Post is very awesome , select your App to share \n%1$s . </string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="saved_canceled">Saved Canceled</string>
    <string name="comments_title">Comments</string>
    <string name="resizable_text_read_more">Read more…</string>
    <string name="resizable_text_read_less">Read less</string>
    <string name="empty"></string>

    <string name="rang_salary">%s K</string>


    <!--    Profile      -->
    <string name="employment">Employment</string>
    <string name="languages">Languages</string>
    <string name="course">Courses</string>
    <string name="recent_post">Recent posts</string>
    <string name="see_all">See all</string>
    <string name="saved_post">Saved posts</string>
    <string name="recent_jobs">Recent jobs</string>
    <string name="saved_jobs">Saved jobs</string>

    <string name="no_notification_yet">No notification yet</string>

    <string name="offline">You Are Currently Offline</string>
    <string name="notification">Notification</string>


    <string name="not_send_tap_to_try_again">Not Send, tap to try again</string>

    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="noResultFound">No Result Found.</string>
    <string name="zero_number">0</string>

    <string name="AddLanguage">Add Language</string>
    <string name="AddSkill">Add Skill</string>
    <string name="edite">Edit</string>
    <string name="add_education">Add Education</string>
    <string name="add_education_here">Add Education here</string>
    <string name="school">School</string>
    <string name="add_school_here">Add School here</string>
    <string name="city">City</string>
    <string name="add_city_here">Add city here</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="position">Position</string>
    <string name="certificate_link">Certificate link</string>
    <string name="about_me">About me</string>
    <string name="talk_about_your_self">Talk about your self</string>
    <string name="profile">Profile</string>

</resources>