<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="@dimen/spacing_medium"
    tools:context="com.cupcake.ui.register.SignUpInformationFragment">

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_title"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_small">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/worksans_regular"
            android:inputType="text"
            android:textSize="@dimen/text_size_body" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/education"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_small">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/worksans_regular"
            android:inputType="text"
            android:textSize="@dimen/text_size_body" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/experiences"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_small">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/worksans_regular"
            android:inputType="text"
            android:textSize="@dimen/text_size_body" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/experience_level"/>
    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            style="@style/chipStyle"
            android:checked="true"
            android:text="@string/entry"/>
        <com.google.android.material.chip.Chip
            style="@style/chipStyle"
            android:text="@string/intermediate"/>
        <com.google.android.material.chip.Chip
            style="@style/chipStyle"
            android:text="@string/mid_level"/>
        <com.google.android.material.chip.Chip
            style="@style/chipStyle"
            android:text="@string/senior_leve"/>
        <com.google.android.material.chip.Chip
            style="@style/chipStyle"
            android:text="@string/expert"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/your_skills"/>
    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="false">

        <com.google.android.material.chip.Chip
            style="@style/cancelableChip"
            android:text="Entry"/>
        <com.google.android.material.chip.Chip
            style="@style/cancelableChip"
            android:text="Intermediate"/>
        <com.google.android.material.chip.Chip
            style="@style/addChipStyle"
            android:text="@string/add_skills"/>
    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/normalButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/next"/>
</LinearLayout>