<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.cupcake.viewmodels.job_search.JobSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingHorizontal="@dimen/spacing_medium"
        android:paddingVertical="@dimen/spacing_medium">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="@dimen/bottom_sheet_drag_handle_view_width"
            android:layout_height="@dimen/bottom_sheet_drag_handle_view_height"
            android:layout_marginVertical="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@color/color_text_tertiary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            style="@style/TextStyle.body"
            android:text="@string/clear"
            android:drawablePadding="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@id/drag_handle"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableStartCompat="@drawable/ic_clear" />

        <TextView
            android:id="@+id/textViewLocation"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/location"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_text" />

        <EditText
            android:id="@+id/editTextLocation"
            style="@style/EditTextCreateJobStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/country_city"
            android:text="@={viewModel.state.jobFilterUIState.location}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLocation" />

        <TextView
            android:id="@+id/textViewJobType"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/job_type"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLocation" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupJopType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewJobType"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/on_site" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/hybrid" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/remote"
                />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewWorkType"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/work_type"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupJopType" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupWorkType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewWorkType"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/full_time" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/part_time" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/internship" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/volunteer" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/temporary" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewExperience"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/experience"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupWorkType" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewExperience"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/entry" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/intermediate" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/mid_level" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/senior_level" />

            <com.google.android.material.chip.Chip
                style="@style/chipStyle"
                android:text="@string/expert" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textSalary"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/salary"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupExperience" />

<!--        <com.google.android.material.slider.RangeSlider-->
<!--            android:id="@+id/sliderRange"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:values="@array/initial_rang_salary"-->
<!--            app:trackActiveDrawable="@drawable/slider_track"-->
<!--            app:trackInactiveDrawable="@drawable/slider_track"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textSalary"-->
<!--            android:valueFrom="0.0"-->
<!--            android:valueTo="100.0"-->
<!--             />-->

        <EditText
            android:id="@+id/minSalary"
            style="@style/TextStyle.body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/boarder_text_salary"
            android:gravity="center"
            android:text="@={viewModel.state.jobFilterUIState.salary.minSalary}"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:textColor="@color/primary"
            app:layout_constraintTop_toBottomOf="@id/textSalary"
            app:layout_constraintStart_toStartOf="@id/textSalary" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerRangSalary"
            android:layout_width="16dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:layout_constraintStart_toEndOf="@id/minSalary"
            app:layout_constraintTop_toTopOf="@id/minSalary"
            app:layout_constraintBottom_toBottomOf="@id/minSalary" />

        <EditText
            android:id="@+id/maxSalary"
            style="@style/TextStyle.body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:background="@drawable/boarder_text_salary"
            android:gravity="center"
            android:text="@={viewModel.state.jobFilterUIState.salary.maxSalary}"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:textColor="@color/primary"
            app:layout_constraintStart_toEndOf="@id/dividerRangSalary"
            app:layout_constraintTop_toTopOf="@id/minSalary"
            app:layout_constraintBottom_toBottomOf="@id/minSalary" />

        <TextView
            android:id="@+id/labelUsdMonth"
            style="@style/TextStyle.body"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:text="@string/usd_month"
            android:textColor="@color/color_text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSalary" />

        <Button
            android:id="@+id/button_apply_job"
            style="@style/normalButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/job_details_button_height"
            android:text="@string/done"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/spacing_large"
            android:onClick="@{()-> viewModel.onApplyClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/minSalary"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>