<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".profile.about_me.EditAboutMeProfileFragment">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back">
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/text_view_title_about_me"
            style="@style/Text_view_title_profile_post_or_job"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:background="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tool_bar"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutContent"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/accent_red"
            app:hintEnabled="false"
            android:background="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title_about_me">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:gravity="top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/spacing_medium"
                android:hint="@string/talk_about_your_self"
                style="@style/TextStyle.body"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/text_size_body" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button_save_about_me"
            style="@style/normalButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/job_details_button_height"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>